# clinical-careplan-automation

./: .gitignore  README.md  presentation.qmd  pyproject.toml  theme.scss
data/samples/: adverse_event_titration_bundle.json  standard_titration_bundle.json
scripts/: generate_samples.py
src/: __init__.py
src/engine/: __init__.py  titration.py
src/models/: __init__.py  fhir_helpers.py
src/utils/: __init__.py  terminology.py
tests/: test_titration.py
